@@ -1,3 +1,10 @@
+Sun Sep 25 17:02:27 UTC 2011  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/Parallel_Connect_Strategy/run_test.pl:
+          Copy only those configuration files that are needed by the targets.
+          We don't want to solve this in the test framework; the script knows
+          which configuration files should be copied.
+
 Wed Sep 21 13:40:30 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/MT_Client/run_test.pl:
